--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,17 +1,20 @@
 *{
     box-sizing: border-box;
     list-style-type: none;
-    color: darkblue;
-    font-size: large;
     font-weight: bold;
 }
 html {
    height: 100%;
 }
+p, figcaption p, section p{
+    line-height: 1.8;
+    font-size: small;
+    color: #1d1c29;
+}
 body{
     margin: auto;
     width:80%;
-    padding: 0;
+    padding: 10px;
     min-height: 100%;
 }
 div.content{
@@ -20,41 +23,24 @@ div.content{
     min-height:75%;
     padding:1em;
 }
-#header{
-    color: #625d5d;
-}
-#header *{
-    font-size: medium;
-    color: #625d5d;
-}
-strong{
-    font-weight: bold;
-    font-size: larger;
-}
-figcaption p{
-    font-size: small;
-    color: #1d1c29;
+figcaption{
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 article > h1{
     color: #625d5d;;
     text-align: center;
 }
-section{
+section,.section{
     padding:2rem;
     background: #9fa0a5;
-    margin:2rem;
+    margin:3rem 2rem;
+    position: relative;
+    box-sizing: border-box;
 }
-embed{
+embed, video, object{
     margin: auto;
-}
-h2,p{
-    font-size: large;
-}
-
-.player-controls{
-    width: 100%;
-    box-shadow: 0 0 10px 0 grey;
-    background: transparent;
+    position: relative;
 }
 
 .fa{
@@ -69,7 +55,23 @@ h2,p{
     color: white;
     opacity: 0.5;
 }
-
-figcaption{
-    color: white;
+figcaption p{
+}
+figcaption > pre{
+    font-size: large;
+    color: darkblue;
+}
+.strong{
+    color: #c23232;
+    font-weight: bold;
+    font-size: larger;
+}
+footer,.center{
+    text-align: center;
+}
+.center{
+    padding-top: 1rem;
+    margin: 2rem 1rem;
+    font-size: x-large;
+    line-height: 1.8;
 }
